crates/deadline-cli/tests/snapshots/cli_root__known_error_prints_message_to_stdout_and_exits_one.snap
---
source: crates/deadline-cli/tests/cli_root.rs
info:
  program: deadline
  args:
    - config
    - get
    - nonexistent.setting
  env:
    AWS_ACCESS_KEY_ID: AKIAIOSFODNN7EXAMPLE
    AWS_CONFIG_FILE: ""
    AWS_DEFAULT_PROFILE: ""
    AWS_DEFAULT_REGION: us-west-2
    AWS_ENDPOINT_URL: ""
    AWS_ENDPOINT_URL_CLOUDWATCHLOGS: "http://localhost:54649"
    AWS_ENDPOINT_URL_DEADLINE: "http://localhost:54649"
    AWS_ENDPOINT_URL_STS: "http://localhost:54649"
    AWS_PROFILE: ""
    AWS_SECRET_ACCESS_KEY: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
    AWS_SECURITY_TOKEN: ""
    AWS_SESSION_TOKEN: ""
    AWS_SHARED_CREDENTIALS_FILE: ""
    DEADLINE_CONFIG_FILE_PATH: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpPa813g/config
    HOME: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpPa813g
---
success: false
exit_code: 1
----- stdout -----
AWS Deadline Cloud configuration has no setting named 'nonexistent.setting'.

----- stderr -----
