crates/deadline-cli/tests/snapshots/cli_root__log_level_invalid_config_value_falls_back_to_warning.snap
---
source: crates/deadline-cli/tests/cli_root.rs
info:
  program: deadline
  args:
    - config
    - show
  env:
    AWS_ACCESS_KEY_ID: AKIAIOSFODNN7EXAMPLE
    AWS_CONFIG_FILE: ""
    AWS_DEFAULT_PROFILE: ""
    AWS_DEFAULT_REGION: us-west-2
    AWS_ENDPOINT_URL: ""
    AWS_ENDPOINT_URL_DEADLINE: "http://localhost:51714"
    AWS_ENDPOINT_URL_STS: "http://localhost:51714"
    AWS_PROFILE: ""
    AWS_SECRET_ACCESS_KEY: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
    AWS_SECURITY_TOKEN: ""
    AWS_SESSION_TOKEN: ""
    AWS_SHARED_CREDENTIALS_FILE: ""
    DEADLINE_CONFIG_FILE_PATH: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpoFBPgH/config
    HOME: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpoFBPgH
---
success: true
exit_code: 0
----- stdout -----
AWS Deadline Cloud configuration file:
   [CONFIG_PATH]

deadline-cloud-monitor.path:  (default)
   The filesystem path to Deadline Cloud monitor, set during login process.

defaults.aws_profile_name: (default) (default)
   The AWS profile name to use by default.

settings.job_history_dir: ~/.deadline/job_history/(default) (default)
   The directory in which to place the job submission history for this AWS
   profile name.

defaults.farm_id:  (default)
   The Farm ID to use by default.

settings.storage_profile_id:  (default)
   The storage profile that this workstation conforms to.

defaults.queue_id:  (default)
   The Queue ID to use by default.

defaults.job_id:  (default)
   The Job ID to use by default.

settings.auto_accept: false (default)
   Automatically accept the default choice for any interactive prompts.

settings.conflict_resolution: NOT_SELECTED (default)
   How to handle downloads if a file already exists.

settings.log_level: TRACE 
   The logging level to use in the CLI and GUIs.

telemetry.opt_out: false (default)
   If set to 'true', don't record any telemetry events.

telemetry.identifier:  (default)
   A randomly generated identifier used to record telemetry events.

defaults.job_attachments_file_system: COPIED (default)
   The file system mode to use for job attachments when running jobs.

settings.s3_max_pool_connections: 50 (default)
   The maximum number of connections to keep in the S3 connection pool.

settings.small_file_threshold_multiplier: 20 (default)
   Multiplier for calculating the small file size threshold.

settings.known_asset_paths:  (default)
   A list of paths that should not generate warnings when outside storage
   profile locations.

settings.locale:  (default)
   The locale to use for the UI. If empty, uses the system locale.

settings.force_s3_check: false (default)
   Controls S3 verification behavior for job attachments.


----- stderr -----
Log Level 'TRACE' not in ["ERROR", "WARNING", "INFO", "DEBUG"]. Defaulting to WARNING
